data/manifests/artifacthub/bitnami/thanos/001_networkpolicy_release-name-thanos-query-frontend.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: release-name-thanos-query-frontend
  namespace: default
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: thanos
    app.kubernetes.io/version: 0.39.2
    helm.sh/chart: thanos-17.3.1
    app.kubernetes.io/component: query-frontend
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/name: thanos
      app.kubernetes.io/component: query-frontend
  policyTypes:
  - Ingress
  - Egress
  egress:
  - {}
  ingress:
  - ports:
    - port: 9090
    - port: 9090
